feat: add message differ, character engine, and polling pipeline (Phase 2)
Add the core intelligence layer: detect new messages via polling/diffing,
generate AI heckler commentary from three characters (Waldorf, Statler,
Gerald), and wire the continuous poll→diff→generate pipeline.

- Install @anthropic-ai/sdk for character commentary generation
- Add MessageDiffer with 2s streaming debounce and conversation switch detection
- Add CharacterEngine with chained commentary, gate checks, and 10s cooldown
- Add character configs (Waldorf, Statler, Gerald) with distinct personalities
- Replace one-shot AX read with 3s polling loop in main process
- Fix Swift parser to recursively find message elements by own-class matching
- Add .env to gitignore and support ANTHROPIC_API_KEY via electron-vite env

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:mac": "electron-vite build && electron-builder --mac"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.74.0",
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.18",
