--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.18",
+    "electron-store": "^8.2.0",
+    "framer-motion": "^12.33.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
