fix: audit fixes and add character intro on conversation switch
SwiftBridge: replace single-pending-slot with command queue, add
process restart with backoff, stdin guard, and 10s command timeout.

Data correctness: add conversationId to CommentEvent and guard
against stale commentary delivery; fix cooldown race with generating
flag; fix settle timer stale closure; fix duplicate messages in
recentMessages.

Packaging: add extraResources for ax-reader binary, add entitlements
for main app, remove dangerous allow-dyld-environment-variables.

New feature: on conversation switch a random character delivers a
deadpan intro after the Now Showing marquee dismisses.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,9 +9,13 @@ files:
   - '!{.eslintcache,eslint.config.mjs,.prettierignore,.prettierrc.yaml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
+extraResources:
+  - from: 'resources/ax-reader'
+    to: 'ax-reader'
 asarUnpack:
   - 'resources/**'
 mac:
+  entitlements: build/entitlements.mac.plist
   entitlementsInherit: build/entitlements.mac.plist
   notarize: false
 dmg:
