test: add vitest infrastructure with 38 tests across 3 suites
- Set up vitest 4.x with ESM config, npm test / npm test:watch scripts
- MessageDiffer: 14 tests (conversation switch, settling, streaming, Thinking bypass)
- CharacterEngine: 14 tests (commentary, cooldown, concurrency, chaining, intro, roast)
- SwiftBridge: 10 tests (command queue, timeout, error handling, destroy, process exit)
- Exclude test files from production typecheck (vitest handles its own)

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "build": "npm run typecheck && electron-vite build",
     "build:swift": "bash scripts/build-swift.sh",
     "postinstall": "electron-builder install-app-deps && npm run build:swift",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "build:mac": "electron-vite build && electron-builder --mac"
   },
   "dependencies": {
@@ -46,6 +48,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "typescript": "^5.9.3",
-    "vite": "^7.2.6"
+    "vite": "^7.2.6",
+    "vitest": "^4.0.18"
   }
 }
