--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,12 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "src/main/**/*", "src/preload/**/*", "src/shared/**/*", "src/characters/**/*"],
+  "include": [
+    "electron.vite.config.*",
+    "src/main/**/*",
+    "src/preload/**/*",
+    "src/shared/**/*",
+    "src/characters/**/*"
+  ],
   "exclude": ["src/**/*.test.ts"],
   "compilerOptions": {
     "composite": true,
