chore: add app icon, file logger, and skip code signing for dev builds

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -15,6 +15,7 @@ extraResources:
 asarUnpack:
   - 'resources/**'
 mac:
+  identity: "-"
   entitlements: build/entitlements.mac.plist
   entitlementsInherit: build/entitlements.mac.plist
   notarize: false
